2001-07-27  Yuuichi Teranishi  <teranisi@gohome.org>

	* elserv.el (toplevel): Added autoload setting for elserv-xmlrpc.
	(elserv-default-server-name): New user option.
	(elserv-search-default-make-index): Ditto.
	(elserv-server-admin-full-name): Ditto.
	(elserv-server-admin-mail-address): Ditto.
	(elserv-buffer-search-index-buffer): New buffer local variable.
	(elserv-start): Setup elserv-buffer-search-index-buffer.
	(elserv-stop): Clean up elserv-buffer-search-index-buffer.
	(elserv-publish): Make search index if elserv-search-default-make-index
	is non-nil or (:index t) argument is specified.
	(elserv-search-index-buffer-name): New constant.
	(elserv-search-initialize): New function.
	(elserv-search-buffer): Ditto.
	(elserv-search-list-files-internal): Ditto.
	(elserv-search-list-files): Ditto.
	(elserv-search-add-index): Ditto.
	(elserv-search-add-directory-index): Ditto.
	(elserv-search): Ditto.

	* elserv-xmlrpc.el, es-xmlrpc.el, xml-rpc.el: New files.

2001-07-19  Yuuichi Teranishi  <teranisi@gohome.org>

	* elserv.el (product): Up to 0.4.0.

	* README.ja: Update.

	* es-demo.el (elserv-demo-post-apropos): Fixed problem when no
	apropos matched.

2001-07-18  Yuuichi Teranishi  <teranisi@gohome.org>

	* elservd: Removed.

	* elservd.in: New file.

	* Makefile (GOMI): Added elservd.

	* ELSERV-MK (config-ruby): New function.
	(config-elserv): Call `config-ruby'.
	(config-elserv-package): Ditto.

	* COPYING: New file.

	* es-wiki.el (elserv-wiki-function): Redirect "" to "/".

	* es-mhc.el (elserv-mhc-function): Don't cause an error when
	month is "".

	* es-demo.el (elserv-demo-publish): Changed name for upload.

	* elserv.el (elserv-make-redirect): Added argument `result'.
	(elserv-service-directory): Follow change above.
	(elserv-service-function): Don't redirect here.

	* ELSERV-MK: Check whether ruby is installed or not.

2001-07-17  OHASHI Akira  <bg66@koka-in.org>

        * elserv-autoindex.el (elserv-autoindex): Simplify.